# tic-tac-tech

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_game.sh
include/: Board.h  Game.h
include/Resources/: ResourceManager.h  SoundManager.h
include/UI/: AnimationManager.h  Button.h  Menu.h  ThemeManager.h
resources/: README.md
resources/sounds/: README.txt
src/: Board.cpp  Game.cpp  SimpleTicTacTech.cpp  main.cpp
src/Resources/: ResourceManager.cpp  SoundManager.cpp
src/UI/: AnimationManager.cpp  Button.cpp  Menu.cpp  ThemeManager.cpp
src/simple/: TicTacTech.cpp  compile.sh  run_game.sh
tools/: convert_svg_to_png.py  create_images.py  generate_sounds.py  simple_sounds.py
web/: index.html  script.js  style.css
